# slang

./: contrib.md  license.txt  objectscheme.txt  readme.md  todo.md  urlscheme.txt
slang_backend/: Cargo.toml  testing.py
slang_backend/migrations/2023-08-05-210946_messages/: down.sql  up.sql
slang_backend/migrations/2023-08-06-213854_users/: up.sql
slang_backend/migrations/2023-08-08-042118_slangdb/: down.sql  up.sql
slang_backend/src/: dbmanager.rs  lib.rs  messenger.rs  models.rs  schema.rs  webmanager.rs
slang_frontend/: app.vue  nuxt.config.ts  package-lock.json  package.json  socket_testing.js  sockettest.ts
slang_frontend/assets/: styles.css  vars.css
slang_frontend/components/: Channellist.vue  Grouplist.vue  NavIcon.vue  Navbar.vue  Navgroup.vue  ProfilePopout.vue
slang_frontend/middleware/: auth.global.ts
slang_frontend/pages/: friends.vue  index.vue  login.vue  notifications.vue
slang_frontend/pages/groups/[group]/: [channel].vue  index.vue  settings.vue
slang_frontend/pages/users/: [user].vue
slang_landing/: .firebaserc  package.json
slang_landing/public/: index.html  styles.css
