[package]
name = "slang_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = {version="2.1.0", features=["postgres"]}
dotenvy = "0.15"
rocket = {version="=0.5.0-rc.3", features=["json"]}